--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-cache": "^5.1.2",
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
